z-index fix

--- a/src/styles/gameover.css
+++ b/src/styles/gameover.css
@@ -137,5 +137,7 @@
   margin: 10px 0;
   background: white;
   border-radius: 5px;
-  box-shadow: 1px 1px 3px 3px rgba(0,0,0,0.1)
+  box-shadow: 1px 1px 3px 3px rgba(0,0,0,0.1);
+  position: absolute;
+  z-index: 2;
 }
